--- a/biome.json
+++ b/biome.json
@@ -27,6 +27,9 @@
       "recommended": true,
       "a11y": {
         "useValidAnchor": "off"
+      },
+      "style": {
+        "noNonNullAssertion": "off"
       }
     }
   },
